[package]
name = "rest-client_codegen"
version = "0.3.0"
authors = ["Michl Steglich <mrgreaka@gmail.com>"]
edition = "2018"
workspace = "../"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greaka/rest-client"
description = "codegen for rest-client"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
syn = { version = "1.0", features = ["full"] }
quote = "0.6"
