[package]
name = "rest-client"
version = "0.1.1"
authors = ["Michl Steglich <mrgreaka@gmail.com>"]
edition = "2018"
workspace = "../"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greaka/rest-client"
description = "a simple rest client based on reqwest"

[dependencies]
"rest-client_codegen" = { version = "0.1", path = "../codegen" }
